k8s/manifestIngress.yml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: ingress-ng
  namespace: ddk
  annotations:
    kubernetes.io/ingress.class: "nginx"
    nginx.ingress.kubernetes.io/configuration-snippet: |
      rewrite ^/otusapp/\w+/$ http://arch.homework/health permanent;
spec:
  ingressClassName: nginx
  rules:
    - host: arch.homework
      http:
        paths:
          - pathType: Prefix
            path: /
            backend:
              service:
                name: app
                port:
                  number: 80
